openshift/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend

spec:
  replicas: 3

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:

        - name: frontend
          image: nikhil11022000/myfrontend:v1.2
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000

          readinessProbe:
            tcpSocket:
              port: 3000

            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: 3000

            initialDelaySeconds: 30
            periodSeconds: 20

          resources:
            requests:
              cpu: 200m
              memory: 256Mi

            limits:
              cpu: 800m
              memory: 1Gi
